DROP TABLE IF EXISTS cart CASCADE;
DROP TABLE IF EXISTS cart_item CASCADE;

CREATE TABLE IF NOT EXISTS cart (
	id SERIAL PRIMARY KEY,
	user_id INT NOT NULL,
	created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
	updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS cart_item (
	id SERIAL PRIMARY KEY,
	cart_id INT NOT NULL REFERENCES cart(id) ON DELETE CASCADE,
	product_id VARCHAR(100) NOT NULL,
	quantity INT NOT NULL,
	price DECIMAL(7,2) NOT NULL,
	created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
	updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);
